--- a/src/app/modules/home/portal/portal.component.html
+++ b/src/app/modules/home/portal/portal.component.html
@@ -2,7 +2,7 @@
 <section class="portail-block">
   <div class="container">
     <div class="title-row">
-      <h2>Portal</h2>
+      <h2>Home</h2>
     </div>
     <div class="wrap">
       <div class="listing d-flex flex-wrap">
