--- a/src/app/modules/home/products/products.component.html
+++ b/src/app/modules/home/products/products.component.html
@@ -17,13 +17,13 @@
       <div class="pod-data-row" *ngFor="let item of products | filter:search; let i = index">
         <div class="number po-col">Product {{i + 1}}</div>
         <div class="name po-col">{{item.product_name}}</div>
-        <div class="img po-col"><img src="{{item.imageUrl}}" alt=""></div>
+        <div class="img po-col" (click)="onImageClick(item)"><img src="{{item.imageUrl}}" alt=""></div>
         <div class="qty po-col">
           <span>Quantity</span>
           <div class="qtybox">
-            <button type="button" id="add" class="add" (click)="updateAddCart(item, 'add')">+</button>
+            <button type="button" id="add" class="add" (click)="updateAddCart(item, 'remove')">-</button>
             <input type="number" id="1" [value]=item.quantity min="1" max="100" />
-            <button type="button" id="sub" class="sub" (click)="updateAddCart(item, 'remove')">-</button>
+            <button type="button" id="sub" class="sub" (click)="updateAddCart(item, 'add')">+</button>
 
           </div>
         </div>
