Added User Management

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,27 +1,55 @@
-<header class="site-header">
+<header class="site-header" *ngIf="!isAdmin">
     <div class="top-row">
-       <div class="container">
-          <div class="ct-row d-flex flex-wrap">
-             <div class="lang"><a href="#">Français</a></div>
-             <div class="logout" *ngIf="!generalService.hideLinks"><a href="javascript: void(0)" (click)="handleLogout()">Log out</a></div>
-          </div>
-       </div>
+        <div class="container">
+            <div class="ct-row d-flex flex-wrap">
+                <div class="lang"><a href="#">Français</a></div>
+                <div class="logout" *ngIf="!generalService.hideLinks"><a href="javascript: void(0)" (click)="handleLogout()">Log out</a></div>
+            </div>
+        </div>
     </div>
     <div class="main-menu">
-       <div class="container">
-          <div class="ct-row d-flex flex-wrap" [ngClass]="{'content-center': generalService.hideLinks}">
-             <div class="logo">
-                <a href="/home"><img src="../../../assets/images/logo.svg"></a>
-             </div>
-             <div class="nav-toggle" (click)="showNav()"  *ngIf="!generalService.hideLinks"><i></i></div>
-             <div class="menu"  *ngIf="!generalService.hideLinks">
-                <ul>
-                   <li [routerLink]="['/home/portal']" routerLinkActive="active"><a href="javascript: void(0)"  >Home</a></li>
-                   <li [routerLink]="['/home/information']" routerLinkActive="active"><a href="javascript: void(0)" >My Information</a></li>
-                   <li [routerLink]="['/home/products']" routerLinkActive="active"><a href="javascript: void(0)"  >Place an order</a></li>
-                </ul>
-             </div>
-          </div>
-       </div>
+        <div class="container">
+            <div class="ct-row d-flex flex-wrap" [ngClass]="{'content-center': generalService.hideLinks}">
+                <div class="logo">
+                    <a href="/home"><img src="../../../assets/images/logo.svg"></a>
+                </div>
+                <div class="nav-toggle" (click)="showNav()" *ngIf="!generalService.hideLinks"><i></i></div>
+                <div class="menu" *ngIf="!generalService.hideLinks">
+                    <ul>
+                        <li [routerLink]="['/home/portal']" routerLinkActive="active"><a href="javascript: void(0)">Home</a></li>
+                        <li [routerLink]="['/home/information']" routerLinkActive="active"><a href="javascript: void(0)">My Information</a></li>
+                        <li [routerLink]="['/home/products']" routerLinkActive="active"><a href="javascript: void(0)">Place an order</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
- </header>
+</header>
+
+<header class="site-header" *ngIf="isAdmin">
+    <div class="top-row">
+        <div class="container">
+            <div class="ct-row d-flex flex-wrap">
+                <div class="lang"><a href="#">Français</a></div>
+                <div class="logout" *ngIf="!generalService.hideLinks"><a href="javascript: void(0)" (click)="handleLogout()">Log out</a></div>
+            </div>
+        </div>
+    </div>
+    <div class="main-menu">
+        <div class="container">
+            <div class="ct-row d-flex flex-wrap" [ngClass]="{'content-center': generalService.hideLinks}">
+                <div class="logo">
+                    <a href="/home"><img src="../../../assets/images/logo.svg"></a>
+                </div>
+                <div class="nav-toggle" (click)="showNav()" *ngIf="!generalService.hideLinks"><i></i></div>
+                <div class="menu" *ngIf="!generalService.hideLinks">
+                    <ul>
+                        <li [routerLink]="['/admin/portal']" routerLinkActive="active"><a href="javascript: void(0)">Home</a></li>
+                        <li [routerLink]="['/admin/customers']" routerLinkActive="active"><a href="javascript: void(0)">Manage Customers</a></li>
+                        <li [routerLink]="['/admin/products']" routerLinkActive="active"><a href="javascript: void(0)">Manage Products</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
