--- a/src/app/modules/admin/portal/portal.component.html
+++ b/src/app/modules/admin/portal/portal.component.html
@@ -8,13 +8,13 @@
                 <div class="box">
                     <div class="inside">
                         <h3>Manage Products</h3>
-                        <a href="javascript: void(0)" [routerLink]="['/home/information']" routerLinkActive="router-link-active" class="border-btn">Go</a>
+                        <a href="javascript: void(0)" [routerLink]="['/admin/products']" routerLinkActive="router-link-active" class="border-btn">Go</a>
                     </div>
                 </div>
                 <div class="box">
                     <div class="inside">
                         <h3>Manage Customers</h3>
-                        <a href="javascript: void(0)" [routerLink]="['/home/products']" class="border-btn">Go</a>
+                        <a href="javascript: void(0)" [routerLink]="['/admin/customers']" class="border-btn">Go</a>
                     </div>
                 </div>
             </div>
