--- a/src/app/modules/home/confirm-order/confirm-order.component.html
+++ b/src/app/modules/home/confirm-order/confirm-order.component.html
@@ -1,45 +1,45 @@
 <section class="place-order-block">
     <div class="container">
-      <div class="top-row">
-        <h3>Confirm an order</h3>
-      </div>
-      <div class="po-data-table">
-        <div class="pod-heading-row">
-          <div class="number po-col">Product number</div>
-          <div class="name po-col">Product name</div>
-          <div class="img po-col">Product image</div>
-          <div class="qty po-col">Quantity</div>
-          <div class="action po-col">Action</div>
+        <div class="top-row">
+            <h3>Confirm an order</h3>
         </div>
-        <div class="pod-data-row" *ngFor="let item of products; let i = index">
-          <div class="number po-col">Product {{i + 1}}</div>
-          <div class="name po-col">{{item.product_name}}</div>
-          <div class="img po-col"><img src="{{item.imageUrl}}" alt=""></div>
-          <div class="qty po-col">
-            <span>Quantity</span>
-            <div class="qtybox">
-              <button type="button" id="add" class="add" (click)="updateAddCart(item, 'remove')">-</button>
-            <input type="number" id="1" [value]=item.quantity min="1" max="100" />
-            <button type="button" id="sub" class="sub" (click)="updateAddCart(item, 'add')">+</button>
+        <div class="po-data-table">
+            <div class="pod-heading-row">
+                <div class="number po-col">Product number</div>
+                <div class="name po-col">Product name</div>
+                <div class="img po-col">Product image</div>
+                <div class="qty po-col">Quantity</div>
+                <div class="action po-col">Action</div>
             </div>
-          </div>
-          <div class="action po-col"><span>Action</span><a href="javascript: void(0)" (click)="updateAddCart(item, 'remove')">Remove</a></div>
+            <div class="pod-data-row" *ngFor="let item of products; let i = index">
+                <div class="number po-col">Product {{i + 1}}</div>
+                <div class="name po-col">{{item.product_name}}</div>
+                <div class="img po-col"><img src="{{item.imageUrl}}" alt=""></div>
+                <div class="qty po-col">
+                    <span>Quantity</span>
+                    <div class="qtybox">
+                        <button type="button" id="add" class="add" (click)="updateAddCart(item, 'remove')">-</button>
+                        <input type="number" id="1" [value]=item.quantity min="1" max="100" />
+                        <button type="button" id="sub" class="sub" (click)="updateAddCart(item, 'add')">+</button>
+                    </div>
+                </div>
+                <div class="action po-col"><span>Action</span><a href="javascript: void(0)" (click)="updateAddCart(item, 'remove')">Remove</a></div>
+            </div>
         </div>
-    </div>
 
-    <div class="note" style="padding-top: 20px;">Choose date you want to receive your order. If a date is not available in calendar it is because we can't deliver at this day</div>
-    <div class="select-date-main">
-     <dp-date-picker theme="dp-material"
+        <div class="note" style="padding-top: 20px;">Choose date you want to receive your order. If a date is not available in calendar it is because we can't deliver at this day</div>
+        <div class="select-date-main">
+            <!-- <dp-date-picker theme="dp-material"
                             [config]="datePickerConfig"
                             required="true"
                             [(ngModel)]="selectedDate"
                             placeholder="Select Delivery Date">
-</dp-date-picker>
-    </div>  
+</dp-date-picker> -->
+            <input class="input-box" placeholder="Click to select a date" angular-mydatepicker name="mydate" (click)="dp.toggleCalendar()" [(ngModel)]="model" [options]="myDpOptions" #dp="angular-mydatepicker" />
+        </div>
 
-      <div class="bottom-btn">
-        <a href="javascript: void(0)" (click)="confirmOrder()">Confirm Order</a>
-      </div>
+        <div class="bottom-btn">
+            <a href="javascript: void(0)" (click)="confirmOrder()">Confirm Order</a>
+        </div>
     </div>
-  </section>
-  
+</section>
