--- a/src/app/modules/home/confirm-order/confirm-order.component.html
+++ b/src/app/modules/home/confirm-order/confirm-order.component.html
@@ -5,9 +5,9 @@
         </div>
         <div class="po-data-table">
             <div class="pod-heading-row">
-                <div class="number po-col">Product number</div>
-                <div class="name po-col">Product name</div>
-                <div class="img po-col">Product image</div>
+                <div class="number po-col">{{'productName' | translate}}</div>
+                <div class="name po-col">{{'productName' | translate}}</div>
+                <div class="img po-col">{{'productImage' | translate}}</div>
                 <div class="qty po-col">Quantity</div>
                 <div class="action po-col">Action</div>
             </div>
