--- a/src/app/modules/admin/customers/customers.component.html
+++ b/src/app/modules/admin/customers/customers.component.html
@@ -1,12 +1,12 @@
 <section class="place-order-block">
     <div class="container">
         <div class="top-row">
-            <h3>Manage Customers</h3>
+            <h3>{{'manageCustomers' | translate}}</h3>
             <form>
-                <input type="search" name="" [(ngModel)]="search" placeholder="Search" [ngModelOptions]="{standalone: true}">
+                <input type="search" name="" [(ngModel)]="search" placeholder="{{'search' | translate}}" [ngModelOptions]="{standalone: true}">
             </form>
             <div class="bottom-btn margin-0">
-                <a href="javascript: void(0)" (click)="openModal(template, false)">Add New Customer</a>
+                <a href="javascript: void(0)" (click)="openModal(template, false)">{{'addNewCustomer' | translate}}</a>
             </div>
             <div class="bottom-btn margin-0">
                 <a href="javascript: void(0)" (click)="handleImport()">
@@ -16,16 +16,16 @@
         </div>
         <div class="po-data-table customer">
             <div class="pod-heading-row">
-                <div class="number po-col">Customer number</div>
-                <div class="client po-col">Client Id</div>
-                <div class="name po-col">Name</div>
-                <div class="email po-col">Email</div>
+                <div class="number po-col">{{'customerNumber' | translate}}</div>
+                <div class="client po-col">{{'clientId' | translate}}</div>
+                <div class="name po-col">{{'name' | translate}}</div>
+                <div class="email po-col">{{'email' | translate}}</div>
                 <!-- <div class="c-name po-col">Company Name</div> -->
                 <!-- <div class="city po-col">City</div>
                 <div class="phone po-col">Phone</div>
                 <div class="address po-col">Address</div> -->
                 <div class="action po-col">Action</div>
-                <div class="action po-col">Delete</div>
+                <div class="action po-col">{{'delete' | translate}}</div>
             </div>
             <div class="pod-data-row" *ngFor="let item of users | filter:search; let i = index">
                 <div class="number po-col">Customer {{i + 1}}</div>
@@ -36,8 +36,8 @@
                 <!-- <div class="city po-col">{{item.city}}</div>
                 <div class="phone po-col">{{item.phone}}</div>
                 <div class="address po-col">{{item.address}}</div> -->
-                <div class="action po-col"><span>Action</span><a href="javascript: void(0)" *ngIf="currentUser != item.clientId" (click)="openModal(template, true, item)">Edit Item</a></div>
-                <div class="action po-col"><span>Delete</span><a href="javascript: void(0)" *ngIf="currentUser != item.clientId" (click)="deleteUser(item.clientId)">Delete Item</a></div>
+                <div class="action po-col"><span>Action</span><a href="javascript: void(0)" *ngIf="currentUser != item.clientId" (click)="openModal(template, true, item)">{{'editItem' | translate}}</a></div>
+                <div class="action po-col"><span>{{'delete' | translate}}</span><a href="javascript: void(0)" *ngIf="currentUser != item.clientId" (click)="deleteUser(item.clientId)">Delete Item</a></div>
             </div>
         </div>
     </div>
@@ -46,7 +46,7 @@
 <ng-template #template>
     <div class="modal-header">
         <h4 class="modal-title pull-left">
-            {{(userForm?.value.name && (userForm?.value._id != '')) ? userForm?.value.name : 'Add New Customer'}}
+            {{(userForm?.value.name && (userForm?.value._id != '')) ? userForm?.value.name : ('addNewCustomer' | translate)}}
         </h4>
         <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="modalRef?.hide()">
             <span aria-hidden="true" class="visually-hidden">&times;</span>
@@ -57,14 +57,14 @@
             <form class="common-form" #f="ngForm" [formGroup]="userForm">
                 <div class="field-row">
                     <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.clientId?.errors && isSubmitted}">
-                        <label>Client Id</label>
+                        <label>{{'clientId' | translate}}</label>
                         <span class="error-span" *ngIf="(userForm?.controls?.clientId?.errors && isSubmitted)">
                         Please enter name
                     </span>
                         <input type="text" formControlName="clientId" name="" required="">
                     </div>
                     <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.name?.errors && isSubmitted}">
-                        <label>Name</label>
+                        <label>{{'name' | translate}}</label>
                         <span class="error-span" *ngIf="(userForm?.controls?.name?.errors && isSubmitted)">
                             Please enter name
                         </span>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="field-row">
                     <div class="field-group width-100" [ngClass]="{'field-error': userForm?.controls?.email?.errors && isSubmitted}">
-                        <label>Email</label>
+                        <label>{{'email' | translate}}</label>
                         <span class="error-span" *ngIf="(userForm?.controls?.email?.errors && isSubmitted)">
                             Please enter valid email
                         </span>
@@ -83,7 +83,7 @@
 
                 <div class="field-row">
                     <div class="field-group" [ngClass]="{'field-error': ((userForm?.controls?.password?.errors || userForm.value.password !== userForm.value.confirmPassword) && isSubmitted)}">
-                        <label>Password</label>
+                        <label>{{'password' | translate}}</label>
                         <span class="error-span" *ngIf="((userForm?.controls?.password?.errors && isSubmitted) || 
                     ((userForm.value.password !== userForm.value.confirmPassword) && isSubmitted))">
                             Please enter password
@@ -91,7 +91,7 @@
                         <input type="password" formControlName="password" name="" required="">
                     </div>
                     <div class="field-group" [ngClass]="{'field-error': ((userForm?.controls?.password?.errors || userForm.value.password !== userForm.value.confirmPassword) && isSubmitted)}">
-                        <label>Password confirmation</label>
+                        <label>{{'passwordConfirmation' | translate}}</label>
                         <span class="error-span" *ngIf="((userForm?.controls?.confirmPassword?.errors && isSubmitted) || 
                     ((userForm.value.password !== userForm.value.confirmPassword) && isSubmitted))">
                             Please enter confirm password
@@ -102,14 +102,14 @@
 
                 <div class="field-row">
                     <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.phone?.errors && isSubmitted}">
-                        <label>Phone</label>
+                        <label>{{'phone' | translate}}</label>
                         <span class="error-span" *ngIf="(userForm?.controls?.phone?.errors && isSubmitted)">
                             Please enter Phone number
                         </span>
                         <input type="text" formControlName="phone" name="" required="">
                     </div>
                     <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.address?.errors && isSubmitted}">
-                        <label>Address</label>
+                        <label>{{'address' | translate}}</label>
                         <span class="error-span" *ngIf="(userForm?.controls?.address?.errors && isSubmitted)">
                             Please enter address
                         </span>
@@ -119,14 +119,14 @@
 
                 <div class="field-row">
                     <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.postalCode?.errors && isSubmitted}">
-                        <label>Postal Code</label>
+                        <label>{{'postalCode' | translate}}</label>
                         <span class="error-span" *ngIf="(userForm?.controls?.postalCode?.errors && isSubmitted)">
                             Please enter Postal code
                         </span>
                         <input type="text" formControlName="postalCode" name="" required="">
                     </div>
                     <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.city?.errors && isSubmitted}">
-                        <label>City</label>
+                        <label>{{'city' | translate}}</label>
                         <span class="error-span" *ngIf="(userForm?.controls?.city?.errors && isSubmitted)">
                             Please enter city
                         </span>
@@ -136,7 +136,7 @@
 
                 <div class="field-row">
                     <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.companyName?.errors && isSubmitted}">
-                        <label>Company name</label>
+                        <label>{{'companyName' | translate}}</label>
                         <span class="error-span" *ngIf="(userForm?.controls?.companyName?.errors && isSubmitted)">
                             Please enter Company name
                         </span>
@@ -155,14 +155,14 @@
 
                 <div class="field-row">
                     <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.location?.errors && isSubmitted}">
-                        <label>Location</label>
+                        <label>{{'location' | translate}}</label>
                         <input type="text" formControlName="location" name="" required="">
                         <span class="error-span" *ngIf="(userForm?.controls?.location?.errors && isSubmitted)">
                             Please enter Location
                         </span>
                     </div>
                     <div class="field-group d-flex gap-20 align-end">
-                        <label>Active </label>
+                        <label>{{'active' | translate}}</label>
                         <label class="switch">
                             <input type="checkbox" formControlName="isActive">
                             <span class="slider round"></span>
@@ -172,35 +172,35 @@
 
                 <div class="field-row" *ngIf="userForm?.value?.role =='client'">
                     <div class="field-group width-100">
-                        <label>Delivery Available On:</label>
+                        <label>{{'deliveryAvailableOn' | translate }}:</label>
                         <div class="day-wrapper">
                             <div class="day">
                                 <input type="checkbox" id="monday" name="monday" formControlName="monday">
-                                <label for="monday">Monday</label>
+                                <label for="monday">{{'monday' | translate}}</label>
                             </div>
                             <div class="day">
                                 <input type="checkbox" id="tuesday" name="tuesday" formControlName="tuesday">
-                                <label for="tuesday">Tuesday</label>
+                                <label for="tuesday">{{'tuesday' | translate}}</label>
                             </div>
                             <div class="day">
                                 <input type="checkbox" id="wednesday" name="wednesday" formControlName="wednesday">
-                                <label for="wednesday">Wednesday</label>
+                                <label for="wednesday">{{'wednesday' | translate}}</label>
                             </div>
                             <div class="day">
                                 <input type="checkbox" id="thursday" name="thursday" formControlName="thursday">
-                                <label for="thursday">Thursday</label>
+                                <label for="thursday">{{'thursday' | translate}}</label>
                             </div>
                             <div class="day">
                                 <input type="checkbox" id="friday" name="friday" formControlName="friday">
-                                <label for="friday">Friday</label>
+                                <label for="friday">{{'friday' | translate}}</label>
                             </div>
                             <div class="day">
                                 <input type="checkbox" id="saturday" name="saturday" formControlName="saturday">
-                                <label for="saturday">Saturday</label>
+                                <label for="saturday">{{'saturday' | translate}}</label>
                             </div>
                             <div class="day">
                                 <input type="checkbox" id="sunday" name="sunday" formControlName="sunday">
-                                <label for="sunday">Sunday</label>
+                                <label for="sunday">{{'sunday' | translate}}</label>
                             </div>
                         </div>
                     </div>
@@ -209,7 +209,7 @@
                 </div>
 
                 <div class="bottom-row">
-                    <input type="submit" name="" [value]="(!userForm?.value._id) ? 'Save': 'Edit'" (click)="updateUser()">
+                    <input type="submit" name="" [value]="(!userForm?.value._id) ? 'Save': ('edit' | translate)" (click)="updateUser()">
                 </div>
             </form>
         </div>
