--- a/src/app/modules/admin/portal/portal.component.html
+++ b/src/app/modules/admin/portal/portal.component.html
@@ -7,13 +7,13 @@
             <div class="listing d-flex flex-wrap">
                 <div class="box">
                     <div class="inside">
-                        <h3>Manage Products</h3>
+                        <h3>{{'manageProducts'|translate}}</h3>
                         <a href="javascript: void(0)" [routerLink]="['/admin/products']" routerLinkActive="router-link-active" class="border-btn">Go</a>
                     </div>
                 </div>
                 <div class="box">
                     <div class="inside">
-                        <h3>Manage Customers</h3>
+                        <h3>{{'manageCustomers' | translate}}</h3>
                         <a href="javascript: void(0)" [routerLink]="['/admin/customers']" class="border-btn">Go</a>
                     </div>
                 </div>
