--- a/src/app/modules/home/information/information.component.html
+++ b/src/app/modules/home/information/information.component.html
@@ -7,14 +7,14 @@
       <form class="common-form" #f="ngForm" [formGroup]="userForm">
         <div class="field-row">
           <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.name?.errors && isSubmitted}">
-            <label>Name</label>
+            <label>{{'name' | translate}}</label>
             <span class="error-span" *ngIf="(userForm?.controls?.name?.errors && isSubmitted)">
               Please enter name
             </span>
             <input type="text" formControlName="name" name="" required="">
           </div>
           <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.email?.errors && isSubmitted}">
-            <label>Email</label>
+            <label>{{'email' | translate}}</label>
             <span class="error-span" *ngIf="(userForm?.controls?.email?.errors && isSubmitted)">
               Please enter valid email
             </span>
@@ -23,7 +23,7 @@
         </div>
         <div class="field-row">
           <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.password?.errors && isSubmitted}">
-            <label>Password</label>
+            <label>{{'password' | translate}}</label>
             <span class="error-span" *ngIf="((userForm?.controls?.password?.errors && isSubmitted) || 
             ((userForm.value.password !== userForm.value.confirmPassword) && isSubmitted))">
               Please enter password
@@ -31,7 +31,7 @@
             <input type="password" formControlName="password" name="" required="">
           </div>
           <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.confirmPassword?.errors && isSubmitted}">
-            <label>Password confirmation</label>
+            <label>{{'passwordConfirmation' | translate}}</label>
             <span class="error-span" *ngIf="((userForm?.controls?.confirmPassword?.errors && isSubmitted) || 
             ((userForm.value.password !== userForm.value.confirmPassword) && isSubmitted))">
               Please enter confirm password
@@ -41,27 +41,27 @@
         </div>
         <div class="field-row">
           <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.phone?.errors && isSubmitted}">
-            <label>Phone</label>
+            <label>{{'phone' | translate}}</label>
             <span class="error-span" *ngIf="(userForm?.controls?.phone?.errors && isSubmitted)">
               Please enter Phone number
             </span>
             <input type="text" formControlName="phone" name="" required="">
           </div>
           <div class="field-group">
-            <label>Address</label>
+            <label>{{'address' | translate}}</label>
             <input type="text" name="" required="" value={{user.address}} disabled>
           </div>
         </div>
         <div class="field-row">
           <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.postalCode?.errors && isSubmitted}">
-            <label>Postal Code</label>
+            <label>{{'postalCode' | translate}}</label>
             <span class="error-span" *ngIf="(userForm?.controls?.postalCode?.errors && isSubmitted)">
               Please enter Postal code
             </span>
             <input type="text" formControlName="postalCode" name="" required="">
           </div>
           <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.city?.errors && isSubmitted}">
-            <label>City</label>
+            <label>{{'city' | translate}}</label>
             <span class="error-span" *ngIf="(userForm?.controls?.city?.errors && isSubmitted)">
               Please enter city
             </span>
@@ -70,7 +70,7 @@
         </div>
         <div class="field-row">
           <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.companyName?.errors && isSubmitted}">
-            <label>Company name</label>
+            <label>{{'companyName' | translate}}</label>
             <span class="error-span" *ngIf="(userForm?.controls?.companyName?.errors && isSubmitted)">
               Please enter Company name
             </span>
