--- a/src/app/modules/home/portal/portal.component.html
+++ b/src/app/modules/home/portal/portal.component.html
@@ -8,7 +8,7 @@
                 <div class="box">
                     <div class="inside">
                         <h3>My Information</h3>
-                        <a href="javascript: void(0)" [routerLink]="['/home/information']" routerLinkActive="router-link-active" class="border-btn">Edit</a>
+                        <a href="javascript: void(0)" [routerLink]="['/home/information']" routerLinkActive="router-link-active" class="border-btn">{{'edit' | translate}}</a>
                     </div>
                 </div>
                 <div class="box">
