--- a/src/app/modules/home/products/products.component.html
+++ b/src/app/modules/home/products/products.component.html
@@ -3,14 +3,14 @@
         <div class="top-row">
             <h3>Place an order</h3>
             <form>
-                <input type="search" name="" [(ngModel)]="search" placeholder="Search" [ngModelOptions]="{standalone: true}">
+                <input type="search" name="" [(ngModel)]="search" placeholder="{{'search' | translate}}" [ngModelOptions]="{standalone: true}">
             </form>
         </div>
         <div class="po-data-table">
             <div class="pod-heading-row">
-                <div class="number po-col">Product number</div>
-                <div class="name po-col">Product name</div>
-                <div class="img po-col">Product image</div>
+                <div class="number po-col">{{'productNumber' | translate}}</div>
+                <div class="name po-col">{{'productName' | translate}}</div>
+                <div class="img po-col">{{'productImage' | translate}}</div>
                 <div class="qty po-col">Quantity</div>
                 <div class="action po-col">Action</div>
             </div>
