basic login test case and taking user to the admin customer side and trying to loop through the modal

--- a/src/app/modules/admin/portal/portal.component.html
+++ b/src/app/modules/admin/portal/portal.component.html
@@ -8,13 +8,13 @@
                 <div class="box">
                     <div class="inside">
                         <h3>{{'manageProducts'|translate}}</h3>
-                        <a href="javascript: void(0)" [routerLink]="['/admin/products']" routerLinkActive="router-link-active" class="border-btn">Go</a>
+                        <a href="javascript: void(0)" [routerLink]="['/admin/products']" routerLinkActive="router-link-active" class="border-btn prod">Go</a>
                     </div>
                 </div>
                 <div class="box">
                     <div class="inside">
                         <h3>{{'manageCustomers' | translate}}</h3>
-                        <a href="javascript: void(0)" [routerLink]="['/admin/customers']" class="border-btn">Go</a>
+                        <a href="javascript: void(0)" [routerLink]="['/admin/customers']" class="border-btn cust">Go</a>
                     </div>
                 </div>
             </div>
