--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -27,14 +27,14 @@
                <!-- <div class="forgot-link">
                   <a href="javascript: void(0)" (click)="forgetPassword()">Forget your password</a>
                </div> -->
-               <input type="submit" name="" value="Login" (click)="login()">
+               <button type="submit" name="" value="Login" (click)="login()">Login</button>
             </div>
          </form>
       </div>
    </div>
 </section>
 
-<section class="form-section">
+<!-- <section class="form-section">
    <div class="container">
       <div class="wrap m-auto">
          <div class="title">
@@ -58,5 +58,5 @@
          </form>
       </div>
    </div>
-</section>
+</section> -->
 <app-footer></app-footer>
